@@ -5,75 +5,75 @@ import com.tightdb.internal.util;
 
 public class Tightdb extends PerformanceBase implements IPerformance {
 
-    @DefineTable(row="Test")
-	class test
-	{
-		int 	indexInt;
-        String 	second;
-        int 	byteInt;
-        int 	smallInt;
-        long 	longInt;
-	}
-    
+    @DefineTable(row="TestRow")
+    class test
+    {
+        int     indexInt;
+        String  second;
+        int     byteInt;
+        int     smallInt;
+        long    longInt;
+    }
+
     private TestTable table = null;
-	
+
     public Tightdb() {
-    	table = new TestTable();	
+        table = new TestTable();
     }
-    
+
     public long usedNativeMemory() {
-    	return util.getNativeMemUsage();
+        return util.getNativeMemUsage();
     }
-    
+
     public void buildTable(int rows) {
-		for (int i = 0; i < rows; ++i) {
-		    int n = Util.getRandNumber();
-		    table.add(n, Util.getNumberString(n), Performance.BYTE_TEST_VAL, Performance.SMALL_TEST_VAL, Performance.LONG_TEST_VAL);
-		}
+        for (int i = 0; i < rows; ++i) {
+            int n = Util.getRandNumber();
+            table.add(n, Util.getNumberString(n), Performance.BYTE_TEST_VAL, Performance.SMALL_TEST_VAL, Performance.LONG_TEST_VAL);
+        }
     }
-    
+
     //--------------- small Int
-    
+
     public void begin_findSmallInt(long value) {
-    	//TestQuery q = table.smallInt.eq(value);
+        //TestQuery q = table.smallInt.eq(value);
     }
-    
+
     public boolean findSmallInt(long value) {
-    	//Test res = q.findFirst();
-    	Test res = table.smallInt.findFirst(value);	
-    	return (res != null);
+        //Test res = q.findFirst();
+        TestRow res = table.smallInt.findFirst(value);
+        return (res != null);
     }
-    
+
     //--------------- byte Int
 
     public boolean findByteInt(long value) {
-    	Test res = table.byteInt.findFirst(value);		
+        TestRow res = table.byteInt.findFirst(value);
         return (res != null);
     }
-    
+
     //--------------- long Int
 
     public boolean findLongInt(long value) {
-    	Test res = table.longInt.findFirst(value);		
+        TestRow res = table.longInt.findFirst(value);
         return (res != null);
     }
 
     //---------------- string
-    
+
     public boolean findString(String value) {
-    	Test res = table.second.eq(value).findFirst();	
+        TestRow res = table.second.eq(value).findFirst();
         return (res != null);
     }
-    
+
     //---------------- int with index
-    
+
     public boolean addIndex() {
-    	return false;
+        return false;
     }
-   
-	public long findIntWithIndex(long value) 
-	{
-        Test res = table.indexInt.findFirst(value);
-		return (res != null) ? (int)res.getPosition() : -1;
-	}
+
+    public long findIntWithIndex(long value)
+    {
+        TestRow res = table.indexInt.findFirst(value);
+        return (res != null) ? (int)res.getPosition() : -1;
+    }
 }
